Add replace version
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -23,6 +23,7 @@ spec:
   description: >
     {{.README | indent 4 | trimSpace}}
   version: {{.Version}}
+  replaces: {{.Name}}.v{{.ReplaceVersion}}
   maturity: alpha
   maintainers:
   {{.Maintainers | yaml | indent 2 | trimSpace}}
