bug fix for aliasing in a different resource group
Signed-off-by: Mandana Vaziri <mvaziri@us.ibm.com>

--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -278,9 +278,7 @@ spec:
                     type: string
                   region:
                     type: string
-                  resourcegroup:
-                    type: string
-                  resourcegroupid:
+                  resourceGroupID:
                     type: string
                   resourcelocation:
                     type: string
@@ -382,9 +380,7 @@ spec:
                     type: string
                   region:
                     type: string
-                  resourcegroup:
-                    type: string
-                  resourcegroupid:
+                  resourceGroupID:
                     type: string
                   resourcelocation:
                     type: string
