Enable coverage on master branch
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
       script: make lint
     - name: Test
       script: make coverage
-      if: type = pull_request  # Don't run int tests on the same account in parallel, risks name conflicts
+      if: (branch = master AND type = push) OR type = pull_request  # Don't run int tests too much on the same account in parallel, risks service name conflict failures
     - name: Test End-to-end
       script: make test-e2e
     - name: Docker Build
