--- a/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
@@ -22,7 +22,7 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
-  version: v1alpha1
+  version: v1beta1
   versions:
   - name: v1alpha1
     schema:
