Fix shape of deployments
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -55,7 +55,7 @@ spec:
       clusterPermissions:
       {{.RBAC | yaml | indent 6 | trimSpace}}
       deployments: 
-      - {{.DeploymentSpec | yaml | indent 8 | trimSpace}}
+      {{.Deployments | yaml | indent 6 | trimSpace}}
   customresourcedefinitions:
     owned:
       {{.CRDs | yaml | indent 6 | trimSpace}}
