Split cluster roles and regular roles
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -53,7 +53,9 @@ spec:
     strategy: deployment
     spec:
       clusterPermissions:
-      {{.RBAC | yaml | indent 6 | trimSpace}}
+      {{.ClusterRoles | yaml | indent 6 | trimSpace}}
+      permissions:
+      {{.Roles | yaml | indent 6 | trimSpace}}
       deployments: 
       {{.Deployments | yaml | indent 6 | trimSpace}}
   customresourcedefinitions:
