Raise memory limit for OpenShift: https://github.com/IBM/cloud-operators/issues/199
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -32,7 +32,8 @@ spec:
         resources:
           limits:
             cpu: 100m
-            memory: 30Mi
+            # TODO(johnstarich): Reduce back to 30Mi once this is resolved: https://github.com/IBM/cloud-operators/issues/199
+            memory: 125Mi
           requests:
             cpu: 100m
             memory: 20Mi
