--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -27,6 +27,11 @@ spec:
         - /manager
         args:
         - --enable-leader-election
+        env:
+        - name: CONTROLLER_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         image: controller:latest
         name: manager
         resources:
