Fix OLM data & formatting issues (#200)
Fixes OLM metadata so it will install properly from Operator Hub for v0.2+. Adds make tasks to assists OLM testing.
Bumps the memory limit to mitigate an OOMKilled issue when running in OpenShift 4.4 (i.e. lots of built-in secrets). Opened #199 to look into it further.

Also update TokenController to skip processing any secret not using the well-known names. e.g. `secret-ibm-cloud-operator` `<namespace>-secret-ibm-cloud-operator`

Signed-off-by: Art Berger <arthur.berger@ibm.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -53,9 +53,11 @@ spec:
     strategy: deployment
     spec:
       clusterPermissions:
-      {{.RBAC | yaml | indent 6 | trimSpace}}
+      {{.ClusterRoles | yaml | indent 6 | trimSpace}}
+      permissions:
+      {{.Roles | yaml | indent 6 | trimSpace}}
       deployments: 
-      - {{.DeploymentSpec | yaml | indent 8 | trimSpace}}
+      {{.Deployments | yaml | indent 6 | trimSpace}}
   customresourcedefinitions:
     owned:
       {{.CRDs | yaml | indent 6 | trimSpace}}
