--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -27,12 +27,18 @@ spec:
         - /manager
         args:
         - --enable-leader-election
+        env:
+        - name: CONTROLLER_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         image: controller:latest
         name: manager
         resources:
           limits:
             cpu: 100m
-            memory: 30Mi
+            # TODO(johnstarich): Reduce back to 30Mi once this is resolved: https://github.com/IBM/cloud-operators/issues/199
+            memory: 125Mi
           requests:
             cpu: 100m
             memory: 20Mi
