Fix Markdown formatting for Operator Hub
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -20,7 +20,7 @@ spec:
   # image should be 175x175
   - base64data: {{include "ibmcloud.png" . | base64}}
     mediatype: image/png
-  description: >
+  description: |-
     {{.README | indent 4 | trimSpace}}
   version: {{.Version}}
   replaces: {{.Name}}.v{{.ReplaceVersion}}
