Add new stable channel. New versions will update the stable channel.
This isn't perfect right now, but it will be accurate
once we release v1.0.0.

Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/package.yaml
+++ b/internal/cmd/genolm/templates/package.yaml
@@ -1,4 +1,6 @@
 packageName: {{.Name}}
 channels:
   - name: alpha
+    currentCSV: ibmcloud-operator.v0.1.11
+  - name: stable
     currentCSV: {{.Name}}.v{{.Version}}
