Set default channel to stable
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/package.yaml
+++ b/internal/cmd/genolm/templates/package.yaml
@@ -4,3 +4,4 @@ channels:
     currentCSV: ibmcloud-operator.v0.1.11
   - name: stable
     currentCSV: {{.Name}}.v{{.Version}}
+defaultChannel: stable
