--- a/config/samples/cloudant.yaml
+++ b/config/samples/cloudant.yaml
@@ -1,4 +1,4 @@
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Service
 metadata:
   name: mycloudant
@@ -6,14 +6,14 @@ spec:
   plan: lite
   serviceClass: cloudantnosqldb
 ---
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Binding
 metadata:
   name: binding-cloudant
 spec:
   serviceName: mycloudant
 ---
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Binding
 metadata:
   name: binding-cloudant1
