--- a/config/samples/iot.yaml
+++ b/config/samples/iot.yaml
@@ -1,4 +1,4 @@
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Service
 metadata:
   name: myiot
@@ -7,7 +7,7 @@ spec:
   serviceClass: iotf-service
   serviceClassType: CF
 ---
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Binding
 metadata:
   name: binding-iot
