--- a/config/samples/keyprotect.yaml
+++ b/config/samples/keyprotect.yaml
@@ -1,4 +1,4 @@
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Service
 metadata:
   name: mykeyprotect
@@ -6,7 +6,7 @@ spec:
   plan: tiered-pricing
   serviceClass: kms
 ---
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Binding
 metadata:
   name: binding-keyprotect
