--- a/config/samples/personality.yaml
+++ b/config/samples/personality.yaml
@@ -1,4 +1,4 @@
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Service
 metadata:
   name: mypersonality
@@ -6,7 +6,7 @@ spec:
   plan: lite
   serviceClass: personality-insights
 ---
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Binding
 metadata:
   name: binding-personality
