--- a/config/samples/postgresql.yaml
+++ b/config/samples/postgresql.yaml
@@ -1,4 +1,4 @@
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Service
 metadata:
   name: mypostgresql
@@ -6,7 +6,7 @@ spec:
   plan: standard
   serviceClass: databases-for-postgresql
 ---
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Binding
 metadata:
   name: binding-postgresql
