--- a/config/samples/tone.yaml
+++ b/config/samples/tone.yaml
@@ -1,4 +1,4 @@
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Service
 metadata:
   name: mytone
@@ -6,7 +6,7 @@ spec:
   plan: lite
   serviceClass: tone-analyzer
 ---
-apiVersion: ibmcloud.ibm.com/v1beta1
+apiVersion: ibmcloud.ibm.com/v1
 kind: Binding
 metadata:
   name: binding-tone
