--- a/controllers/testdata/translator-v1beta1.yaml
+++ b/controllers/testdata/translator-v1beta1.yaml
@@ -1,7 +1,7 @@
-apiVersion: ibmcloud.ibm.com/v1
+apiVersion: ibmcloud.ibm.com/v1beta1
 kind: Service
 metadata:
-  name: test-translator-2
+  name: test-translator-1
 spec:
   plan: standard
   serviceClass: language-translator
