--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -32,6 +32,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: MAX_CONCURRENT_RECONCILES
+          value: 1
         image: controller:latest
         name: manager
         resources:
