--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 jobs:
   include:
     - name: Temp release
-      script: make -e RELEASE_VERSION="1.0.10" release
+      script: make -e RELEASE_VERSION="1.0.10" tmp
     - name: Lint
       script: make lint
     - name: Unit Tests
