Block OpenShift 4.9 until we remove deprecated kind versions
Brought up by https://github.com/redhat-openshift-ecosystem/community-operators-prod/pull/163#issuecomment-907546888

Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{.Name}}.v{{.Version}}
   namespace: placeholder
   annotations:
+    # Prevent cluster upgrades to OpenShift Version 4.9 when this bundle is installed on the cluster.
+    # Remove once Kubernetes v1.22 is supported by removing deprecated kind versions.
+    olm.properties: |-
+      [{"type": "olm.maxOpenShiftVersion", "value": "4.8"}]
     alm-examples: |-
       {{.Examples | json | indent 6 | trimSpace}}
     capabilities: Basic Install
