fix(crd): bump controller-gen to 0.4.1, part 2.
I reviewed the internal tool `fixcrd`.

A [branch in `fixcrd`](https://github.com/IBM/cloud-operators/blob/9e16ddee216c7f1ab105b315be2e4c4c08cd3305/internal/cmd/fixcrd/main.go#L90-L96) removed the OpenAPI data type `type:` field from the `binding.spec.parameters.value` and `services.spec.parameters.value` fields in the CRD.  This caused the `CustomResourceDefinition.apiextensions.k8s.io "..." is invalid` errors.

These changes to the PR modify the `fixcrd` tool so that it retains the OpenAPI `type: object` data type for the `value:` field in the CRD and incorporates the changes described in @JohnStarich's feedback.

I verified that the CRDs install properly in a `minikube` instance.

```shell
$ make install
/Users/lanthieg/Developer/git/forks/cloud-operators/cache/controller-gen_0.4.1/controller-gen "crd" rbac:roleName=manager-role webhook paths="./..." output:crd:artifacts:config=config/crd/bases
go run ./internal/cmd/fixcrd ./config/crd/bases/*.yaml
go run ./internal/cmd/firstsetup # Install ICO secret & configmap
IBM Cloud Operators configmap and secret already set up. Skipping...
kustomize build config/crd | kubectl apply -f -
customresourcedefinition.apiextensions.k8s.io/bindings.ibmcloud.ibm.com configured
customresourcedefinition.apiextensions.k8s.io/services.ibmcloud.ibm.com configured
$ kubectl explain --api-version=ibmcloud.ibm.com/v1 binding.spec.parameters
KIND:     Binding
VERSION:  ibmcloud.ibm.com/v1

RESOURCE: parameters <[]Object>

DESCRIPTION:
     Parameters pass configuration to the service during creation

     Param represents a key-value pair

FIELDS:
   attributes   <map[string]map[string]>
     A parameter may have attributes (e.g. message hub topic might have
     partitions)

   name <string> -required-
     Name representing the key.

   value        <map[string]>
     Defaults to null.

   valueFrom    <Object>
     Source for the value. Cannot be used if value is not empty.
$
```

Signed-o

--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -78,6 +78,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -192,6 +193,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -327,6 +329,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -441,6 +444,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -575,6 +579,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -681,6 +686,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
