--- a/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
@@ -61,6 +61,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -197,6 +198,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -330,6 +332,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      type: object
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
