Add preserve unknown fields to fit Kubernetes' exception to openapi type rules: https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definitions/\#validation
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
@@ -61,6 +61,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      x-kubernetes-preserve-unknown-fields: true
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -197,6 +198,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      x-kubernetes-preserve-unknown-fields: true
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
@@ -330,6 +332,7 @@ spec:
                       type: string
                     value:
                       description: Defaults to null.
+                      x-kubernetes-preserve-unknown-fields: true
                     valueFrom:
                       description: Source for the value. Cannot be used if value is
                         not empty.
